2008-04-28  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Don't check md5sum if configured --with-openjdk-src-zip.
	* Makefile.in: Regenerated.

2008-04-27  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (ICEDTEA_PATCHES): Add icedtea-color-profiles.patch.
	(stamps/overlay.stamp): New target.
	(overlay): Likewise.
	(stamps/extract-ecj.stamp): Depend on stamps/overlay.stamp.
	(icedtea): Likewise.
	(icedtea-debug): Likewise.
	(stamps/hotspot-tools-copy-source-files.stamp): Likewise.
	* Makefile.in: Regenerated.
	* overlays/openjdk/jdk/src/share/lib/cmm/lcms/GRAY.pf: New file.
	* overlays/openjdk/jdk/src/share/lib/cmm/lcms/LINEAR_RGB.pf: Likewise.
	* overlays/openjdk/jdk/src/share/lib/cmm/lcms/PYCC.pf: Likewise.
	* patches/icedtea-color-profiles.patch: New patch.

2008-04-24  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-version.patch: Changed product name to OpenJDK.

2008-04-23  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* javaws.desktop (Name): Change to IcedTea Web Start.
	(Comment): Change to IcedTea Application Launcher.
	(Icon): Update to javaws.png.

2008-04-23  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Fixed javaws.png target in EXTRA_DIST.
	* Makefile.in: Regenerated.

2008-04-23  Joshua Sumali  <jsumali@redhat.com>

	* java-javaws.png: Renamed to javaws.png
	* javaws.png: New file.

2008-04-23  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Added new files to EXTRA_DIST.
	* Makefile.in: Regenerated.
	* java-javaws.png: New file.
	* javaws.desktop: Likewise.

2008-04-23  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-fonts.patch: Updated to include Indic languages.
	* patches/icedtea-lib64.patch: Removed /usr/lib/local and
	/usr/lib64/local from default library path.

2008-04-21  Lillian Angel  <langel@redhat.com>
	    Parag Nemade  <pnemade@redhat.com>

	Fixes #443360
	* patches/icedtea-fonts.patch: New patch to fix font paths.
	* Makefile.am: Added new patch to the list.
	* Makefile.in: Regenerated.
