@@ -1,3 +1,9 @@
+2008-04-28  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am
+	(EXTRA_DIST): Added overlays and extra.
+	* Makefile.in: Regenerated.
+
 2008-04-28  Matthias Klose  <doko@ubuntu.com>
 
 	* Makefile.am: Don't check md5sum if configured --with-openjdk-src-zip.
